tests/e2e/complex_nested_expression8.error
Error: syntax error in story at line 1, column 25

1|    (1 + 2) == (0 - -3) and -4 - (-5 + -6)
                              ^^^^^^^^^^^^^

E0122: `int` can't be converted to `boolean`
